	- debugger access is slow: improved by pre-loading windows.
	- can't scroll into the code window: fixed (VTi uses a fixed size list without scrollers)
	- window focus: fixed (list of the code window has default focus)
	- shortcuts (F2, G, ...): fixed
	- key mapping pb (EE, |): fixed
	- pb with Alpha key: fixed
	- no key auto-repeat: fixed
	- long names with the ROM version box: fixed
	- disasm listing (mv2sr instead of move xx,sr): fixed
	- SR flags (VTi emulation): fixed

	Fixes:
	- disable menu access when debugger is opened.
	- I/O bits manipulation functions moved into bits.h and fixed (bit_set/clr buggy) but
		direct file loading is now broken.
	- fixed ON key (works and set on/off LCD screen).

- 05/05/2004, version 1.70: roms
	Rework in progress.	

=====> TiEmu II project re-starts here <=====

- 02/07/2003, version 1.68: jb
	Removed GTK+ 1.2 to GTK+ 2.0.

- 02/01/2003, version 1.68:
	Removed automake support in ./src. Switched to a pure autoconf support.
	Some warning removed.
	
- 30/01/2003, version 1.67:
	Automake reworked and improved. Bu, I still have these ugly links.
	Compilable under MinGW for K. Kofler.	
	
- 01/11/2002, version 1.66:
	Automake/Autoconf does not support sub-dirs any longer -> file are 
	linked now (ugly !).
	
- 13/10/2002, version 1.65:
	Changed to support libticalcs v4.x.x.
	Compilation fixes.
	
- 02/08/2002, version 1.64:
	Changed to support libticalcs v4.x.x. 
	Compilation fixes.
	
- 02/06/2002, version 1.63b:
	FLASH upgrade support works fine now.
	
- 01/06/2002, version 1.63a:
	Beta release.
	
- 01/06/2002, version 1.62q:
	GUI slightly modified (wizard, ROM version, ...) and FLASH upgrade
	management: support unified.
	
- 31/05/2002, version 1.62p:
	Merge with Win32 port attempt.
	
- 30/05/2002, version 1.62o:
	Linkport improved and cleaned-up. Fully works.
	A FLASH upgraded converted into a ROM image with TiLP works...
	
- 30/05/2002, version 1.62m:
	HW memory support improved but it's still impossible to directly load